Fixing video injection layout issue on section fronts

--- a/assets/css/scss/components/_section.scss
+++ b/assets/css/scss/components/_section.scss
@@ -2,6 +2,7 @@
 #main {
 	.video-injection {
 		margin-bottom: 10px;
+		float:left;
 	}
 }
 .upper-heading {
