--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1308,7 +1308,8 @@ body.search {
       color: #7d7e7e; }
 
 #main .video-injection {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  float: left; }
 
 .upper-heading {
   margin-bottom: 30px; }
